--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,7 @@ branches:
 install: true
 script:
   - ls
-  - cd redis
-  - ls
-  - sed -i '27s/6379/6378/' redis/src/test/resources/redis-mix-model.json
+  - redis-cli info
   - ./gradlew --no-daemon build
 git:
   depth: 100
