--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install: true
 script:
   - ls
   - sudo apt-get install -y redis-server
+  - sudo service redis-server start
   - redis-cli info
   - ./gradlew --no-daemon build
 git:
