--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ script:
   - ls
   - sudo apt-get install -y redis-server
   - sudo service redis-server start
+  - redis-server --daemonize yes
   - redis-cli info
   - ./gradlew --no-daemon build
 git:
